--- a/chat/templates/chat/layout.html
+++ b/chat/templates/chat/layout.html
@@ -13,6 +13,9 @@
         <!-- HTMX JavaScript library -->
         <script src="https://unpkg.com/htmx.org@latest/dist/htmx.min.js"></script>
 
+        <!-- HTMX Websocket extension -->
+        <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
+
         <!-- Hyperscript library -->
         <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
 
