--- a/chat/templates/chat/group.html
+++ b/chat/templates/chat/group.html
@@ -10,11 +10,16 @@
         <div class="col-12 d-flex justify-content-center">
 
           <!-- Card box-->
-          <div class="card bg-dark" style="border-radius: 15px; width: 800px;">
+          <div class="card bg-dark" style="border-radius: 15px; width: 100rem;">
 
               <!-- Card Header -->
               <div class="card-header d-flex justify-content-center text-white">
-                  <h1>{{ group_name }}</h1>
+                <h1>{{ group_name }}</h1>
+              </div>
+
+              <!-- Online count -->
+              <div class="card-header d-flex justify-content-center align-items-center py-0 text-info">
+                {% include 'chat/partials/online_count_partial.html' %}
               </div>
 
               <!-- Card body -->
